# burn-contracts

./: Cargo.toml  README.md  devtest.sh  fix.sh  rust-toolchain.toml
.github/workflows/: ci.yml
.run/: Test burn-contracts.run.xml  devtest.run.xml
src/: lib.rs  testing.rs
src/shapes/: bindings.rs  exp.rs  mod.rs  parser.rs
