[package]
name = "burn-contracts"
version = "0.1.0"
keywords = ["burn", "tensor", "contracts", "testing"]
categories = ["development-tools::testing"]
edition = "2021"
repository = "https://github.com/crutcher/burn-contracts"
license = "MIT"
description = "Fluent Contracts for the Burn library"
exclude = [
    ".github/*",
    ".gitignore",
    "*.sh",
]

[dependencies]
burn = { version = "~0.16.0", features = [] }
nom = "8.0.0"
thiserror = "~2.0.0"
once_cell = "~1.20.0"

[dev-dependencies]
burn = { version = "~0.16.0", features = ["ndarray"] }

[features]
testing = []

[lints.clippy]
all = "deny"
pedantic = "deny"
suspicious = "deny"
cargo = "deny"

# upstream bug in burn release?
multiple_crate_versions = { level = "allow", priority = 1 }