[package]
name = "burn-contracts"
version = "0.2.0"
keywords = ["burn", "tensor", "contracts", "testing"]
categories = ["development-tools::testing"]
edition = "2021"
repository = "https://github.com/crutcher/burn-contracts"
license = "MIT"
description = "Fluent Contracts for the Burn library"
exclude = [
    ".github/*",
    ".gitignore",
    "*.sh",
]

[dependencies]
burn = { version = "~0.16.0", features = ["default", "ndarray"] }
# See burn=0.16.0/bincode=2.0.0 bug: https://github.com/tracel-ai/burn/issues/2876
bincode = "=2.0.0-rc.3"
bincode_derive = "=2.0.0-rc.3"
nom = "8.0.0"
thiserror = "~2.0.12"
once_cell = "~1.21.1"
quick_cache = "~0.6.12"

[dev-dependencies]
burn = { version = "~0.16.0", features = ["default", "ndarray"] }

[features]
testing = []

[lints.clippy]
all = "deny"
# pedantic = "deny"
suspicious = "deny"
cargo = "deny"

# upstream bug in burn release?
multiple_crate_versions = { level = "allow", priority = 1 }